# piano

./: .gitignore  CMakeLists.txt  app.c  app.h  audio.c  audio.h  graphics.c  piano.c  ui.c  ui.h
.cache/clangd/index/: SDL_main.h.3C7AF0C7E3D3D75C.idx  SDL_main_impl.h.97BE592384FA4C47.idx  piano.c.F4BA5CE8518FFE90.idx  tinyexpr.h.E2E3865043FD63A9.idx
src/: app.c  app.h  audio.c  audio.h  graphics.c  graphics.h  main.c  ringbuffer.c  ringbuffer.h  ui.c  ui.h
